public/themes/frontend/assets/core.css
/* ... */
.dropdown-menu.custom-menu .notification > .text > span.sender[data-is-seeing="1"]:before {
	content: "\f00c";
	color: #3aab39;
}

.dropdown-menu.custom-menu .notification > .text > span.date {
	display: block;
	font-size: 12px;
	color: #676767;
	margin-top: 2px;
}

.dropdown-menu.custom-menu .notification > .text > .switch {
	width: 47px;
	height: 20px;
}

.dropdown-menu.custom-menu .notification > .text > .switch {
	border: 2px solid #7d7d7d;
	margin-top: -4px;
}

.dropdown-menu.custom-menu .notification > .text > .switch > .slider:before {
	background-color: #7d7d7d;
}

.dropdown-menu.custom-menu .notification > .text > .switch.active {
	border: 2px solid #bacde2;
}

.dropdown-menu.custom-menu .notification > .text > .switch.active > .slider:before {
	background-color: #bacde2;
}

.dropdown-menu.custom-menu .notification > .text > .switch > .slider:before {
	height: 10px;
	width: 10px;
}

.dropdown-menu.custom-menu .friendship-request-buttons > button {
	border: 1px solid #b1b1b1;
	padding: 10px;
	height: 30px;
	line-height: 0px;
	color: #fff;
	font-weight: 700;
	font-size: 12px;
}

.dropdown-menu.custom-menu .friendship-request-buttons > span {
	display: none;
}

.dropdown-menu.custom-menu .friendship-request-buttons > button:before {
	font-family: "Font Awesome 5";
	font-weight: 900;
	padding-right: 5px;
}

.dropdown-menu.custom-menu .friendship-request-buttons > button:nth-child(1) {
	background-color: #269626;
	border: 1px solid #1d751d;
	margin-right: 10px;
}

.dropdown-menu.custom-menu .friendship-request-buttons > button:nth-child(1):before {
	content: "\f00c";
}

.dropdown-menu.custom-menu .friendship-request-buttons > button:nth-child(2) {
	background-color: #962626;
	border: 1px solid #751d1d;
}

.dropdown-menu.custom-menu .friendship-request-buttons > button:nth-child(2):before {
	content: "\f00d";
}

.dropdown-menu.custom-menu .extra-button {
	line-height: 1;
	font-size: 13px;
}

.dropdown-menu.custom-menu.post-user-menu .notification.quick-menu span.active {
	color: #37474f;
}

.dropdown-menu.custom-menu .form {
	background-color: #f8f9fa;
	border: 0;
    border-style: solid;
    border-bottom-width: 1px;
    -moz-border-image: -moz-linear-gradient(right,white,#cedae0,#cedae0,white) 1 20%;
    -o-border-image: -o-linear-gradient(right,white,#cedae0,#cedae0,white) 1 20%;
    border-image: linear-gradient(to right,white 0%,#cedae0 40%,#cedae0 60%,white 100%) 1 20%;
	font-size: 14px;
	font-weight: 700;
	color: #747F8B;
}

.dropdown-menu.custom-menu .form input {
	font-size: 13px;
}

.dropdown-menu.custom-menu .form button {
	padding: 5px 7px;
    font-size: 14px;
}

.scrollable::-webkit-scrollbar {
	background-color:transparent;
	width:15px;
	height: 5px;
}

.scrollable::-webkit-scrollbar-corner {
	background-color: transparent;
}

/* background of the scrollbar except button or resizer */
.scrollable::-webkit-scrollbar-track {
	background-color:transparent;
	padding-left: 10px;
}
.scrollable::-webkit-scrollbar-track:hover {
	background-color:transparent;
}

/* scrollbar itself */
.scrollable::-webkit-scrollbar-thumb {
	background-color:#6f8692;
	border-left: 10px solid transparent;
	background-clip: padding-box;
}
.scrollable::-webkit-scrollbar-thumb:hover {
	background-color:#37474f;
}

/* set button(top and bottom of the scrollbar) */
.scrollable::-webkit-scrollbar-button {display:none}

.modal.custom-modal > .modal-dialog {
	margin: 4.75rem auto;
	max-width: 400px;
}

.modal[id*="post-"] > .modal-dialog, .modal[data-discussion-id] > .modal-dialog, .modal#sign-out-confirmation > .modal-dialog, .modal#twoStepVerification_Modal > .modal-dialog, .modal#forgot-password-attempt > .modal-dialog {
	margin: 9.75rem auto;
}

#post-edit.modal[id*="post-"] > .modal-dialog {
	margin: 9.75rem auto;
	max-width: 60%;
}

.modal.custom-modal > .modal-dialog > .modal-content {
	border: none;
	border-radius: 0;
	overflow: hidden;
}

.modal#move-discussion.custom-modal > .modal-dialog > .modal-content {
	overflow: inherit;
}

.modal.custom-modal >.modal-dialog >.modal-content >.modal-body .bs-searchbox input {
	padding: 10px;
	text-align: left;
	font-size: 14px;
	font-weight: 400;
}

.modal.custom-modal > .modal-dialog > .modal-content > .modal-header {
	background: #fff;
	padding: 10px 15px;
	position: relative;
	color: #747F8B;
	font-weight: bold;
	border: 0px;
	border-style: solid;
	border-bottom-width: 1px;
	-moz-border-image: -moz-linear-gradient(right, white, #cedae0, #cedae0, white) 1 20%;
	-o-border-image: -o-linear-gradient(right, white, #cedae0, #cedae0, white) 1 20%;
	border-image: linear-gradient(to right, white 0%, #cedae0 40%, #cedae0 60%, white 100%) 1 20%;
	box-shadow: 0px 2px 10px -2px #cedae0;
}

.modal.custom-modal > .modal-dialog > .modal-content > .modal-body {
	background-color: #f8f9fa;
	padding: 25px 30px;
	position: initial;
	font-size: 14px;
	font-weight: 700;
	color: #747F8B;
	border: 0px;
	border-style: solid;
	border-bottom-width: 1px;
	-moz-border-image: -moz-linear-gradient(right, white, #cedae0, #cedae0, white) 1 20%;
	-o-border-image: -o-linear-gradient(right, white, #cedae0, #cedae0, white) 1 20%;
	border-image: linear-gradient(to right, white 0%, #cedae0 40%, #cedae0 60%, white 100%) 1 20%;
}

.modal.custom-modal > .modal-dialog > .modal-content > .modal-body:last-child {
	border: none;
}

.modal.custom-modal > .modal-dialog > .modal-content > .modal-body .logo > img {
	width: 250px;
	height: 200px;
}

.modal.custom-modal > .modal-dialog > .modal-content > .modal-body input {
	padding: 9px 10px;
	height: auto;
	text-align: center;
	font-size: 18px;
	color: #343a40;
	background-color: #fdfdfd;
	border: 3px solid #cbcbcb;
	font-weight: 700;
}

.modal.custom-modal > .modal-dialog > .modal-content > .modal-body textarea {
	width: 100%;
	background-color: rgb(253, 253, 253);
	border: 1px solid rgb(203, 203, 203);
	border-radius: 5px;
	font-size: 15px;
	height: 85px;
	padding: 8px 15px;
	color: rgb(52, 58, 64);
	margin-top: 0px;
	margin-bottom: 0px;
}
/* ... */

